--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,5 +10,6 @@
 <body>
     <h1><%= campground.title%></h1>
     <h1><%= campground.location%></h1>
+    <footer><a href="/campgrounds">All Campgrounds</a></footer>
 </body>
 </html>
