Campground Edit & Update

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,6 +10,11 @@
 <body>
     <h1><%= campground.title%></h1>
     <h1><%= campground.location%></h1>
-    <footer><a href="/campgrounds">All Campgrounds</a></footer>
+    <p>
+        <a href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+    </p>
+    <footer>
+        <a href="/campgrounds">All Campgrounds</a>
+    </footer>
 </body>
 </html>
