--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,6 +22,18 @@
                 <a href="/campgrounds">All Campgrounds</a>
             </div>
           </div>
+        <h2>Leave a review</h2>
+        <form action="" class="mb-3">
+          <div class="mb-3">
+            <labe class="form-label" for="rating">Rating</labe>
+            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+          </div>
+          <div class="mb-3">
+            <label class='form-label' for="body">Review</label>
+            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+          </div>
+          <button class="btn btn-success">Submit</button>
+        </form>
     </div>
 </div>
 
