Customize File Input

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -17,7 +17,13 @@
                     Looks good!
                 </div>
             </div>
-            <input type="file" name="image" id="" multiple>
+            <div class="mb-3">
+                <label for="formFileMultiple" class="form-label">Upload Images</label>
+                <input type="file" class="form-control" id="formFileMultiple" name="image" multiple required>
+                <div class="invalid-feedback">
+                    This campground would look much better with a picture.
+                </div>
+            </div>
             <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
                 <input class="form-control" type="text" id="image" name="campground[image]" required>
