--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -21,8 +21,11 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="image">Add Images</label>
-                <input type="file" name="image" id="image" multiple>
+                <label for="formFileMultiple" class="form-label">Add More Images</label>
+                <input type="file" class="form-control" id="formFileMultiple" name="image" multiple required>
+                <div class="invalid-feedback">
+                    This campground would look much better with a picture.
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
