--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -22,7 +22,7 @@
             </div>
             <div class="mb-3">
                 <label for="formFileMultiple" class="form-label">Add More Images</label>
-                <input type="file" class="form-control" id="formFileMultiple" name="image" multiple required>
+                <input type="file" class="form-control" id="formFileMultiple" name="image" multiple>
                 <div class="invalid-feedback">
                     This campground would look much better with a picture.
                 </div>
@@ -46,6 +46,15 @@
                 <div class="valid-feedback">
                     Looks good!
                 </div>
+            </div>
+            <div class="mb-3">
+                <% campground.images.forEach(function(img, i) {%>
+                    <img src="<%= img.url %> " class="img-thumbnail" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
+                    </div>
+                    <label for="image-<%=i%>">Delete?</label>
+                <% }) %>  
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
