--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,11 @@
     <div class="card" mb-3>
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid" alt="" src="<%=campground.images[0].url%> ">
+                <% if(campground.images.length) {%> 
+                    <img class="img-fluid" alt="" src="<%=campground.images[0].url%> ">
+                <% } else {%> 
+                    <img class="img-fluid" alt="" src="https://res.cloudinary.com/douqbebwk/image/upload/v1600060601/YelpCamp/ahfnenvca4tha00h2ubt.png">
+                <% } %> 
             </div>
             <div class="col-md-8">
                 <div class="card-body">
