--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,6 @@
 
   <div class="row">
     <div class="col-6">
-      <div id='map' style='width: 400px; height: 300px;'></div>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <% campground.images.forEach((img, i)=> {%>
@@ -56,6 +55,7 @@
       </div>
     </div>
     <div class="col-6">
+      <div id='map' style='width:100%; height: 300px;'></div>
       <% if(currentUser) {%>
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
