--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div id="map" style="width: 100%; height: 500px"></div>
+<div class="container"></div>
 <h1>All Campgrounds</h1>
 <div>
     <a href="/campgrounds/new">Add Campground</a>
@@ -19,7 +20,7 @@
                     <h5 class="card-title"><%= campground.title %></h5>
                     <p class="card-text"><%= campground.description %> </p>
                     <p class="card-text">
-                        <small class="text-muted"><%= campground.location %> 
+                        <small class="text-muted"><%= campground.location %> </small>
                     </p>
                     <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%= campground.title%> </a>
                 </div>
@@ -27,7 +28,7 @@
         </div>
     </div>
 <% }%>
-
+</div>
 
 <script>
     const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
