--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
     <h1 class="text-center">New Campground</h1>
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -25,12 +25,12 @@
                 </div>
             </div>
             <!-- <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" id="image" name="campground[image]" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-            </div> -->
+        <label class="form-label" for="image">Image Url</label>
+        <input class="form-control" type="text" id="image" name="campground[image]" required>
+        <div class="valid-feedback">
+            Looks good!
+        </div>
+    </div> -->
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
@@ -44,8 +44,8 @@
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description"
-                    name="campground[description]" required></textarea>
+                <textarea class="form-control" type="text" id="description" name="campground[description]"
+                    required></textarea>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
